
Removed the covariate 'season', which was used in conjunction to 'year'. Now, these are concatinated in the temporal covariate.

Changed the name of baseline2eca() to getCovData(). The old function kept for backwards compatibility.

Removed the option 'quiet' in downloadXML(), which is replaced by 'msg'.


########## Version 1.10 (2018-07-06) ##########

Fixed bug in getNMDinfo("v"), where the returned data frame only contained NA.

Fixed bug in surveyPlanner(), where the output data frame 'Transect' contained stratum indices instead of stratum names.

Changed the output of getNMDinfo("taxa") to have one column per species, with the scientific, norwegian, english and russian name as columns.

Fixed bug in plotStratum(), where transect=FLASE did not suppress plotting transects, whereas transect=NULL did. In the new version all values other than TRUE suppresses plotting transects.

Fixed bug in getNMDinfo("platform") and getNMDinfo("v"), where the columns validFrom and validTo did not correspond to the correct platform codes/names due to a sorting of these dates.

Fixed bug in getNMDinfo, where UTF-8 encoding was ineffective (the corresponding bugfix in Version 1.3.2 was discovered to be ineffective). 

Removed error in readStrataPolygons(), where multipolygons were not supported. Now only the first polygon of multipolygons are kept in the outputs 'lonlat' and 'lonlatAll', and all are kept in 'lonlatFull'.

Changed surveyPlanner() to discard strata with zero effort, but keep those strata in the Input list for plotting.

Added the parameter "JavaMem" in bootstrap functions, used for setting the Java memory of each bootstrap replicate (useful to reduce memory for parallelized bootstrapping).
