@@ -16,7 +16,9 @@ install.packages("ftp://ftp.imr.no/StoX/Download/Rstox/Versions/Alpha/Rstox_1.9.
 # Install from github using the devtools package:
 # devtools::install_github("Sea2Data/Rstox", ref="develop")
 
-# R should be installed as the 64 bit version (and 64 bit version ONLY for Windows 10. To do this, uncheck the box "32-bit Files" when selecting components to install. If you are re-intalling an R that has both 32 and 64 bit, you will need to uninstall R first).
+# R should be installed as the 64 bit version. On Windows 10 ONLY the 64 bit version should be used. 
+# To do this, uncheck the box "32-bit Files" when selecting components to install.
+# If you are re-intalling an R that has both 32 and 64 bit, you will need to uninstall R first.
 # On Windows systems with adminstrator requirements, it is recommended to install R in C:/users/<user>/documents/R.
 
 # Note that 64 bit Java is required to run Rstox
@@ -32,7 +34,8 @@ install.packages("ftp://ftp.imr.no/StoX/Download/Rstox/Versions/Alpha/Rstox_1.9.
 # You may want to check that the downloaded version is first in the list by running the following in the Terminal:
 # 	/usr/libexec/java_home -V
 # 	java -version
-# Then run this in the Terminal.app:
+# Then run this in the Terminal.app (you will be asked for password, but the password will not show as you type.
+# It is possible to type the password in a text editor first and then paste it into the Terminal.):
 # 	sudo ln -s $(/usr/libexec/java_home)/jre/lib/server/libjvm.dylib /usr/local/lib
 # 	sudo R CMD javareconf
 # Open R (close and then open if already open) and install rJava:
